// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar component renders a progress bar using default props 1`] = `
.sx8zz8g {
  border-radius: 25px;
  min-height: 12px;
  max-height: 30px;
  position: relative;
  overflow: hidden;
  width: 100%;
}

.sx8zz8gowbp7--size-sm {
  max-width: 6rem;
}

.sx8zz8g4bknw--comp {
  border: 1px solid var(--colors-tonal400);
  background: white;
  color: var(--colors-primary500);
}

.sxypqsd {
  box-sizing: border-box;
  position: absolute;
  background-color: currentcolor;
  height: 100%;
}

<div>
  <div
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="sx8zz8g sx8zz8g4bknw--comp sx8zz8g03kze--appearance-outline sx8zz8g03kze--theme-primary sx8zz8gowbp7--size-sm"
    data-max="100"
    data-radix-progress=""
    data-state="indeterminate"
    percentage="50"
    role="progressbar"
  >
    <div
      class="sxypqsd"
      data-max="100"
      data-radix-progress-indicator=""
      data-state="indeterminate"
    />
  </div>
</div>
`;

exports[`ProgressBar component renders a solid progress bar 1`] = `
.sx8zz8g {
  border-radius: 25px;
  min-height: 12px;
  max-height: 30px;
  position: relative;
  overflow: hidden;
  width: 100%;
}

.sx8zz8gowbp7--size-sm {
  max-width: 6rem;
}

.sx8zz8g4bknw--comp {
  border: 1px solid var(--colors-tonal400);
  background: white;
  color: var(--colors-primary500);
}

.sx8zz8g4qfa7--comp {
  border: 1px solid var(--colors-tonal400);
  background: white;
  color: var(--colors-secondary500);
}

.sx8zz8gmrg77--comp {
  background: var(--colors-tonal300);
  color: var(--colors-primary500);
}

.sxypqsd {
  box-sizing: border-box;
  position: absolute;
  background-color: currentcolor;
  height: 100%;
}

<div>
  <div
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="sx8zz8g sx8zz8gmrg77--comp sx8zz8g03kze--appearance-solid sx8zz8g03kze--theme-primary sx8zz8gowbp7--size-sm"
    data-max="100"
    data-radix-progress=""
    data-state="indeterminate"
    percentage="50"
    role="progressbar"
  >
    <div
      class="sxypqsd"
      data-max="100"
      data-radix-progress-indicator=""
      data-state="indeterminate"
    />
  </div>
</div>
`;

exports[`ProgressBar component renders a xl progress bar 1`] = `
.sx8zz8g {
  border-radius: 25px;
  min-height: 12px;
  max-height: 30px;
  position: relative;
  overflow: hidden;
  width: 100%;
}

.sx8zz8gowbp7--size-sm {
  max-width: 6rem;
}

.sx8zz8gjlwem--size-xl {
  max-width: 20rem;
}

.sx8zz8g4bknw--comp {
  border: 1px solid var(--colors-tonal400);
  background: white;
  color: var(--colors-primary500);
}

.sx8zz8g4qfa7--comp {
  border: 1px solid var(--colors-tonal400);
  background: white;
  color: var(--colors-secondary500);
}

.sx8zz8gmrg77--comp {
  background: var(--colors-tonal300);
  color: var(--colors-primary500);
}

.sxypqsd {
  box-sizing: border-box;
  position: absolute;
  background-color: currentcolor;
  height: 100%;
}

<div>
  <div
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="sx8zz8g sx8zz8g4bknw--comp sx8zz8g03kze--appearance-outline sx8zz8g03kze--theme-primary sx8zz8gjlwem--size-xl"
    data-max="100"
    data-radix-progress=""
    data-state="indeterminate"
    percentage="50"
    role="progressbar"
  >
    <div
      class="sxypqsd"
      data-max="100"
      data-radix-progress-indicator=""
      data-state="indeterminate"
    />
  </div>
</div>
`;
